2015-May-30 Struan Robertson

    * System.h, Documentation: Version changes.

    * HinderedRotorQM1D.cpp: Added sine kinetic energy terms for angle dependent internal
	moment of rotation.

2015-May-06 Chris Morley

    Fix the use of the internal units (cm-1) when derivedFrom used
    in association with a units= attribute, as reported by Robin.

    * src/Rdouble.cpp,src/Rdouble.h:Add a m_units member to hold the internal units and convert 
    addand in Rdouble::SetUpLinkedVars() (when the value of both m_units is known.)

    * src/gDensityOfStates.cpp: initialize the m_units for ZPE.

    * src/plugins/ExponentialDown.cpp: initialize m_units for m_deltaEDown,
    although cm-1 is currently assumed and is unchecked.

2015-May-04 Struan Robertson

	* MESMER manual.docx: Documentation updates.

2015-May-04 Struan Robertson

	* SensitivityAnalysis.cpp: Improved appearance of data generated for external
	analysis.

2015-May-03 Struan Robertson

	* SensitivityAnalysis.cpp: Fixed incorrect vector allocation that was causing
	a crash.

	* IsomerizationReaction.cpp: Altered calculation of high pressure rate 
	coefficients to improve accuracy.

	* CollisionOperator.cpp: Minor change to data output.
	
	* Update of Win32 QA baselines.	

2015-April-30 Chris Morley

    * src/plugins/ThermodynamicTable.cpp: correct the check for there being
      enough temperature points to fit NASA polynomials.
      
    * mesmer1.xsl: format Cantera thermo in Firefox output for the case
      when there is only one fitted polynomial.

2015-April-28 Struan Robertson

	* Examples.bat/.sh: Update of test shell scripts to include sensitivity analysis
	tests.

2015-April-19 Struan Robertson

	* Marquardt.cpp, FittingUtils.cpp/.h: Removed code duplicate related to gaussian 
	parameter set distribution.

	* SecondOrderAssocReaction.cpp: Altered input so that it now adjusts zero
	point energy of dissociation fragment to reflect second order kinetics.
